k8s/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - name: gateway #grcp - http
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      #serviceAccountName: demo-service-account ; it is using default service account;
      containers:
        - name: api-gateway
          image: alobach3/api-gateway:latest
          ports:
            - containerPort: 8080
