k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http #http
      port: 80
      targetPort: 80
      #nodePort: 30080 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      #serviceAccountName: demo-service-account ; it is using default service account;
      containers:
        - name: frontend
          image: alobach3/frontend-git:9a7aee7dd02cdb60f8cb5df51942a95d8bf9d462
          ports:
            - containerPort: 80
